--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello world!</h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Copatible" content="ie-edge"
+</head>
+<body>
+
+  <h1>Hello world!</h1>
+   
+</body>
+</html>
