--- a/folder/inner/index.html
+++ b/folder/inner/index.html
@@ -13,7 +13,7 @@
   <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque aperiam, molestiae vero, maxime fugiat, voluptatum laudantium distinctio aspernatur temporibus expedita dolores molestias nemo numquam odio! Inventore consequatur est eius reiciendis?
   </p>
-  <img src="//github.com/evgeny-pavlov/my-first-project/blob/main/img/img1.png" alt="абсолютный путь">
+  <img src="//evgeny-pavlov.github.io/my-first-project/img/img1.png" alt="абсолютный путь">
   <img src="../../img/img2.png" alt="относительный путь" align="top">
 </body>
 </html>
